--- a/index.html
+++ b/index.html
@@ -483,6 +483,7 @@
             color: white;
             font-size: 1.5rem;
             transition: var(--transition);
+            text-decoration: none;
         }
         
         .social-icon:hover {
