--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             height: 100vh;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-end;
             align-items: center;
             text-align: center;
             color: white;
