--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
             <div class="playlist-container">
                 <p>Essas são as músicas que marcaram a nossa história e que vão embalar a nossa festa. Sinta-se à vontade para ouvir enquanto se prepara para o grande dia!</p>
                 <div class="spotify-embed">
-                    <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DX4SBhb3fqCJd" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://open.spotify.com/embed/playlist/2CkJcJRN5xFwUJyAkRNrXi?utm_source=generator&theme=0" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
