--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                             <span>Paróquia São Pio X - Igreja Matriz de São Benedito<br>R. Ten. Mesquita, 285 - Vila Pantaleao, Caçapava - SP, 12280-048</span>
                         </div>
                         <div class="map-container">
-                            <iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=R.%20Ten.%20Mesquita,%20285%20-%20Vila%20Pantaleao,%20Ca%C3%A7apava%20-%20SP,%2012280-048+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3670.069335930119!2d-45.71038432392781!3d-23.094557544610243!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cc51739fd171ab%3A0xa0488dee36776383!2sPar%C3%B3quia%20S%C3%A3o%20Pio%20X%20-%20Igreja%20Matriz%20de%20S%C3%A3o%20Benedito!5e0!3m2!1spt-BR!2sbr!4v1753198557151!5m2!1spt-BR!2sbr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
                 </div>
@@ -635,7 +635,7 @@
                             <span>Espaço Bella Vista<br>Rua das Palmeiras, 456 - Jardim Paulista</span>
                         </div>
                         <div class="map-container">
-                            <iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=12283482+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3668.7356965334307!2d-45.627855499999995!3d-23.143334199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cc55ac3b163197%3A0x27c466e122f4d0ee!2sRecanto%20da%20Serra!5e0!3m2!1spt-BR!2sbr!4v1753198685077!5m2!1spt-BR!2sbr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
                 </div>
