--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
                 <!-- Confirmação de Presença -->
                 <div class="form-section">
                     <h3 class="form-title">Confirme sua Presença</h3>
-                    <form id="rsvpForm">
+                    <form id="rsvpForm" data-sheet-best="https://api.sheetbest.com/sheets/fb4d3452-034f-45ca-84ad-580bae074ff5">
                         <div class="form-group">
                             <label class="form-label" for="name">Nome Completo</label>
                             <input type="text" class="form-input" id="name" required>
@@ -759,6 +759,7 @@
                         </div>
                         <button type="submit" class="form-button">Confirmar Presença</button>
                     </form>
+                    <div id="formMessage" style="margin-top: 1rem; text-align: center; font-weight: bold;"></div>
                 </div>
                 
                 <!-- Mensagens para o Casal -->
@@ -866,45 +867,55 @@
             }, 2000);
         });
         
-        document.getElementById("rsvpForm").addEventListener("submit", async function (e) {
-  e.preventDefault();
+document.getElementById("rsvpForm").addEventListener("submit", async function (e) {
+            e.preventDefault();
 
-  const form = e.target;
-  const nome = form.nome.value.trim();
-  const presenca = form.presenca.value;
-  const quantidade = form.quantidade.value;
+            const form = e.target;
+            const name = form.querySelector("#name").value.trim();
+            const email = form.querySelector("#email").value.trim();
+            const guests = form.querySelector("#guests").value;
+            const attending = form.querySelector("#attending").value;
+            const sheetBestUrl = form.getAttribute("data-sheet-best");
+            const formMessageElement = document.getElementById("formMessage"); // Get the message element
 
-  if (!nome || !presenca || !quantidade) {
-    document.getElementById("mensagem").textContent = "Preencha todos os campos!";
-    return;
-  }
+            if (!name || !email || !guests || !attending) {
+                formMessageElement.textContent = "Por favor, preencha todos os campos!";
+                formMessageElement.style.color = "red";
+                return;
+            }
 
-  const dados = {
-    nome,
-    presenca,
-    quantidade: parseInt(quantidade)
-  };
+            const data = {
+                Nome: name,
+                Email: email,
+                Numero_Convidados: parseInt(guests),
+                Comparecera: attending === "yes" ? "Sim" : "Não"
+            };
 
-  try {
-    const resposta = await fetch("https://api.sheetbest.com/sheets/fb4d3452-034f-45ca-84ad-580bae074ff5", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify(dados)
-    });
+            try {
+                const response = await fetch(sheetBestUrl, {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json"
+                    },
+                    body: JSON.stringify(data)
+                });
 
-    if (resposta.ok) {
-      document.getElementById("mensagem").textContent = "Confirmação enviada com sucesso! Obrigado ❤️";
-      form.reset();
-    } else {
-      document.getElementById("mensagem").textContent = "Erro ao enviar. Tente novamente.";
-    }
-  } catch (erro) {
-    console.error(erro);
-    document.getElementById("mensagem").textContent = "Erro na conexão. Verifique a internet.";
-  }
-});
+                if (response.ok) {
+                    formMessageElement.textContent = "Confirmação enviada com sucesso! Obrigado ❤️";
+                    formMessageElement.style.color = "green";
+                    form.reset();
+                } else {
+                    const errorData = await response.json(); // Try to read error message from response
+                    formMessageElement.textContent = `Erro ao enviar: ${errorData.message || 'Tente novamente.'}`;
+                    formMessageElement.style.color = "red";
+                }
+            } catch (error) {
+                console.error("Erro na conexão:", error);
+                formMessageElement.textContent = "Erro na conexão. Verifique sua internet ou tente novamente mais tarde.";
+                formMessageElement.style.color = "red";
+            }
+        });
     </script>
+    <script src="https://sbt.0soft.dev/sheet-best-templates.min.js"></script>
 </body>
 </html>
