--- a/index.html
+++ b/index.html
@@ -776,6 +776,7 @@
                         </div>
                         <button type="submit" class="form-button">Enviar Mensagem</button>
                     </form>
+                    <div id="messageFormMessage" style="margin-top: 1rem; text-align: center; font-weight: bold;"></div>
                 </div>
             </div>
         </div>
