--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
     </section>
 
   <!-- Lista de Presentes -->
-  <section class="gifts-invite">
+  <section class="gift-list">
     <div class="container">
         <h2 class="section-title">Presentes</h2>
         <p style="text-align: center; max-width: 800px; margin: 0 auto 2rem;">
