--- a/index.html
+++ b/index.html
@@ -644,17 +644,17 @@
     </section>
 
   <!-- Lista de Presentes -->
-  <section class="gift-list">
-    <div class="container">
-        <h2 class="section-title">Presentes</h2>
-        <p style="text-align: center; max-width: 800px; margin: 0 auto 2rem;">
-            Seu carinho e presença são o mais importante para nós. Mas se desejar nos presentear, ficaremos muito gratos!
-        </p>
-        <div style="text-align: center;">
-            <a href="nav/presentes.html" class="gift-button" style="display: inline-block; width: auto; padding: 1rem 2rem; text-decoration: none;">Ver Lista de Presentes</a>
-        </div>
+<section class="gift-list">
+  <div class="container">
+    <h2 class="section-title">Presentes</h2>
+    <p style="text-align: center; max-width: 800px; margin: 0 auto 2rem;">
+      Seu carinho, presença e alegria são os maiores presentes que podemos receber neste dia tão especial. Caso queira nos agradar com um presente, ficaremos muito felizes e gratos. Pensamos em algumas sugestões que podem tornar esse momento ainda mais inesquecível para nós. Mas, acima de tudo, sua presença já é o melhor presente que podemos desejar!
+    </p>
+    <div style="text-align: center;">
+      <a href="nav/presentes.html" class="gift-button" style="display: inline-block; width: auto; padding: 1rem 2rem; text-decoration: none;">Ver Lista de Presentes</a>
     </div>
-  </section>
+  </div>
+</section>
 
     <!-- Playlist do Casal -->
     <section class="playlist">
