--- a/nav/presentes.html
+++ b/nav/presentes.html
@@ -633,7 +633,7 @@
                 pixKeyElement.textContent = pixKey;
                 
                 // Gerar link PIX direto
-                const pixLink = `00020126330014BR.GOV.BCB.PIX0111519509498505204000053039865406605.205802BR5901N6001C62140510Acucareiro6304B67A`;
+                const pixLink = `br.gov.bcb.pix://pix?pixkey=00020126330014BR.GOV.BCB.PIX0111519509498505204000053039865406605.205802BR5901N6001C62140510Acucareiro6304B67A`;
                 pixDirectLink.href = pixLink;
                 
                 pixModal.style.display = 'flex';
