--- a/index.html
+++ b/index.html
@@ -675,52 +675,11 @@
             <div class="form-container">
                 <!-- Confirmação de Presença -->
                 <div class="form-section">
-                    <h3 class="form-title">Confirme sua Presença</h3>
-                    <form id="rsvpForm" data-sheet-best="https://api.sheetbest.com/sheets/fb4d3452-034f-45ca-84ad-580bae074ff5">
-                        <div class="form-group">
-                            <label class="form-label" for="name">Nome Completo</label>
-                            <input type="text" class="form-input" id="name" required>
-                        </div>
-                        <div class="form-group">
-                            <label class="form-label" for="email">Email</label>
-                            <input type="email" class="form-input" id="email" required>
-                        </div>
-                        <div class="form-group">
-                            <label class="form-label" for="guests">Número de Convidados</label>
-                            <select class="form-select" id="guests" required>
-                                <option value="1">1 pessoa</option>
-                                <option value="2" selected>2 pessoas</option>
-                                <option value="3">3 pessoas</option>
-                                <option value="4">4 pessoas</option>
-                                <option value="5">5 pessoas</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label class="form-label" for="attending">Você comparecerá?</label>
-                            <select class="form-select" id="attending" required>
-                                <option value="yes">Com certeza estarei lá!</option>
-                                <option value="no">Infelizmente não poderei comparecer</option>
-                            </select>
-                        </div>
-                        <button type="submit" class="form-button">Confirmar Presença</button>
-                    </form>
-                    <div id="formMessage" style="margin-top: 1rem; text-align: center; font-weight: bold;"></div>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe0rpQffVSpbmGAzlm73CBhElfjTXPpFmghtbStfJp6hovKYQ/viewform?embedded=true" width="505" height="535" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
                 </div>
-                
                 <!-- Mensagens para o Casal -->
                 <div class="form-section">
-                    <h3 class="form-title">Deixe uma Mensagem</h3>
-                    <form id="messageForm" data-sheet-best="https://api.sheetbest.com/sheets/f0ee1369-cc9e-49de-b529-978a490c1784">
-                        <div class="form-group">
-                            <label class="form-label" for="sender">Seu Nome</label>
-                            <input type="text" class="form-input" id="sender" required>
-                        </div>
-                        <div class="form-group">
-                            <label class="form-label" for="message">Mensagem</label>
-                            <textarea class="form-textarea" id="message" required></textarea>
-                        </div>
-                        <button type="submit" class="form-button">Enviar Mensagem</button>
-                    </form>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfFrhxSVbRjYtQGKWS2Z6SeMlUz2fmFyEy0xyxk8WWKHk647Q/viewform?embedded=true" width="505" height="535" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
                 </div>
             </div>
         </div>
