--- a/index.html
+++ b/index.html
@@ -385,6 +385,24 @@
             background: linear-gradient(to right, var(--primary), var(--secondary));
             color: white;
         }
+.responsive-iframe {
+    position: relative;
+    width: 100%;
+    padding-bottom: 120%; /* Altura proporcional — ajuste se necessário */
+    height: 0;
+    overflow: hidden;
+    border-radius: 15px;
+    box-shadow: var(--shadow);
+}
+
+.responsive-iframe iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
         
         .form-container {
             display: flex;
@@ -671,19 +689,25 @@
 
     <!-- Confirmação de Presença e Mensagens -->
     <section class="rsvp-messages">
-        <div class="container">
-            <div class="form-container">
-                <!-- Confirmação de Presença -->
-                <div class="form-section">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe0rpQffVSpbmGAzlm73CBhElfjTXPpFmghtbStfJp6hovKYQ/viewform?embedded=true" width="505" height="535" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+    <div class="container">
+        <div class="form-container">
+            <!-- Confirmação de Presença -->
+            <div class="form-section">
+                <h3 class="form-title">Confirmação de Presença</h3>
+                <div class="responsive-iframe">
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe0rpQffVSpbmGAzlm73CBhElfjTXPpFmghtbStfJp6hovKYQ/viewform?embedded=true" frameborder="0" allowfullscreen>Carregando…</iframe>
                 </div>
-                <!-- Mensagens para o Casal -->
-                <div class="form-section">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfFrhxSVbRjYtQGKWS2Z6SeMlUz2fmFyEy0xyxk8WWKHk647Q/viewform?embedded=true" width="505" height="535" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+            </div>
+            <!-- Mensagens para o Casal -->
+            <div class="form-section">
+                <h3 class="form-title">Deixe uma Mensagem</h3>
+                <div class="responsive-iframe">
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfFrhxSVbRjYtQGKWS2Z6SeMlUz2fmFyEy0xyxk8WWKHk647Q/viewform?embedded=true" frameborder="0" allowfullscreen>Carregando…</iframe>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
     <!-- Footer -->
     <footer>
         <div class="container">
