--- a/nav/presentes.html
+++ b/nav/presentes.html
@@ -228,6 +228,8 @@
             position: relative;
             box-shadow: 0 10px 30px rgba(0,0,0,0.25);
             animation: fadeIn 0.3s ease-out;
+            overflow-y: auto;
+            max-height: 90vh;
         }
 
         @keyframes fadeIn {
@@ -339,6 +341,33 @@
             .bank-options {
                 grid-template-columns: 1fr;
             }
+            pix-modal-content {
+                padding: 1rem;
+                max-width: 98vw;
+                width: 98vw; 
+                font-size: 0.98rem;
+                border-radius: 10px; 
+            }
+            .modal-title,
+            .modal-instruction,
+            .copy-info,
+            .bank-options,
+            .bank-button {
+                font-size: 1rem;
+            }
+            .close-modal {
+                font-size: 2rem;        
+                top: 10px; 
+                right: 10px;  
+            }    
+            .bank-options {        
+                grid-template-columns: 1fr 1fr;        
+                gap: 10px;    
+            }
+            .bank-button img {
+                width: 32px;
+                height: 32px;
+            }      
         }
         
         @media (max-width: 480px) {
@@ -355,6 +384,13 @@
             }
             
             .gift-container {
+                grid-template-columns: 1fr;
+            }
+            .pix-modal-content {
+                padding: 0.5rem;
+                font-size: 0.92rem;
+            }
+            .bank-options {
                 grid-template-columns: 1fr;
             }
         }
