--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
         /* Header */
         header {
-            background: linear-gradient(rgba(60, 47, 47, 0.7), rgba(60, 47, 47, 0.7)), url('img/casaamento.png') no-repeat 50px center/cover;
+            background: linear-gradient(rgba(60, 47, 47, 0.7), rgba(60, 47, 47, 0.7)), url('img/casaamento.png') no-repeat -56vw center/cover;
             height: 100vh;
             display: flex;
             flex-direction: column;
