--- a/index.html
+++ b/index.html
@@ -417,6 +417,7 @@
             backdrop-filter: blur(10px);
             padding: 2rem;
             border-radius: 15px;
+            overflow-x: hidden;
         }
         
         .form-title {
