--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
             flex: 1;
             min-width: 300px;
         }
+        .story-text p {
+            text-align: justify;
+        }
         
         .story-image {
             flex: 1;
@@ -602,8 +605,7 @@
             <h2 class="section-title">Nossa História</h2>
             <div class="story-content">
                 <div class="story-text">
-                    <p>Nos conhecemos na escola, onde nossos caminhos se cruzaram pela primeira vez. Desde o primeiro momento, senti que ela era alguém muito especial, embora na época não pudesse imaginar o quanto essa pessoa iria se tornar importante na minha vida. Ao longo do tempo, enfrentamos desencontros e a distância, mas o destino sempre pareceu insistir em nos unir novamente, fortalecendo nossa conexão a cada reencontro. Com o passar dos anos, construímos uma relação sólida e autêntica, baseada em conversas profundas, confiança mútua e aprendizado contínuo um com o outro. Agora, após tudo o que passamos juntos, estamos prestes a dar o próximo passo, prontos para compartilhar nossos sonhos, enfrentar desafios e celebrar alegrias lado a lado.</p> <br>
-                        <p>E, com esperança e amor no coração, seguimos juntos rumo ao altar, cientes de que nossa história ainda tem muitos capítulos felizes pela frente.</p>
+                    <p>Nos conhecemos na escola, onde nossos caminhos se cruzaram pela primeira vez. Desde o primeiro momento, senti que ela era alguém muito especial, embora na época não pudesse imaginar o quanto essa pessoa iria se tornar importante na minha vida. Ao longo do tempo, enfrentamos desencontros e a distância, mas o destino sempre pareceu insistir em nos unir novamente, fortalecendo nossa conexão a cada reencontro. Com o passar dos anos, construímos uma relação sólida e autêntica, baseada em conversas profundas, confiança mútua e aprendizado contínuo um com o outro. Agora, após tudo o que passamos juntos, estamos prestes a dar o próximo passo, prontos para compartilhar nossos sonhos, enfrentar desafios e celebrar alegrias lado a lado. E, com esperança e amor no coração, seguimos juntos rumo ao altar, cientes de que nossa história ainda tem muitos capítulos felizes pela frente.</p>
                 </div>
                 <div class="story-image">
                     <img src="https://images.unsplash.com/photo-1519225421980-715cb0215aed?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="Foto do casal">
