--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             margin: 0 auto;
             padding: 0 15px;
         }
+        .container p {
+            padding-left: 5px;
+            text-align: justify
+        }
         
         /* Header */
         header {
