--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
 <section class="gift-list">
   <div class="container">
     <h2 class="section-title">Presentes</h2>
-    <p style="text-align: center; max-width: 800px; margin: 0 auto 2rem;">
+    <p style="text-align: center; max-width: 800px; margin: 0 auto 2rem; text-align: justify;">
       Seu carinho, presença e alegria são os maiores presentes que podemos receber neste dia tão especial. Caso queira nos agradar com um presente, ficaremos muito felizes e gratos. Pensamos em algumas sugestões que podem tornar esse momento ainda mais inesquecível para nós. Mas, acima de tudo, sua presença já é o melhor presente que podemos desejar!
     </p>
     <div style="text-align: center;">
