--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                 <!-- Recepção -->
                 <div class="event-card">
                     <div class="event-image">
-                        <img src="https://images.unsplash.com/photo-1511795409834-ef04bbd61622?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=200&q=80" alt="Local da recepção">
+                        <img src="img/chacara.png" alt="Local da recepção">
                     </div>
                     <div class="event-info">
                         <h3 class="event-title">Recepção</h3>
