--- a/index.html
+++ b/index.html
@@ -653,11 +653,11 @@
                         <h3 class="event-title">Recepção</h3>
                         <div class="event-time">
                             <i class="fas fa-clock event-icon"></i>
-                            <span>21:00 horas</span>
+                            <span>21:30 horas</span>
                         </div>
                         <div class="event-address">
                             <i class="fas fa-map-marker-alt event-icon"></i>
-                            <span>Espaço Bella Vista<br>Rua das Palmeiras, 456 - Jardim Paulista</span>
+                            <span>Rua Mario Fouler - Caçapava (Chácara Recanto da Serra)</span>
                         </div>
                         <div class="map-container">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3668.7356965334307!2d-45.627855499999995!3d-23.143334199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cc55ac3b163197%3A0x27c466e122f4d0ee!2sRecanto%20da%20Serra!5e0!3m2!1spt-BR!2sbr!4v1753198685077!5m2!1spt-BR!2sbr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
