--- a/nav/presentes.html
+++ b/nav/presentes.html
@@ -46,7 +46,7 @@
         
         /* Header */
         header {
-            background: linear-gradient(rgba(60, 47, 47, 0.7), rgba(60, 47, 47, 0.7)), url('https://images.unsplash.com/photo-1511795409834-ef04bbd61622?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=600&q=80') no-repeat center center/cover;
+            background: linear-gradient(rgba(60, 47, 47, 0.7), rgba(60, 47, 47, 0.7)), url('../img/flowers.png') no-repeat center center/cover;
             height: 60vh;
             display: flex;
             flex-direction: column;
