--- a/nav/presentes.html
+++ b/nav/presentes.html
@@ -408,6 +408,7 @@
             font-size:16px;
             border-radius: 12px;
             border: 1px solid #000;
+            box-shadow: var(--shadow);
         }
         
         .instructions {
