--- a/nav/presentes.html
+++ b/nav/presentes.html
@@ -453,7 +453,7 @@
                 </ol>
             </div>
             <h2>Pesquisar Presente</h2>
-            <input type="text" id="gift-search" placeholder="Digite qual o seu presente...">
+            <input type="text" id="gift-search" placeholder="Digite para iniciar a pesquisa...">
             <div class="gift-container">
                 <div class="gift-item">
                     <div class="gift-image">
