--- a/nav/presentes.html
+++ b/nav/presentes.html
@@ -774,6 +774,16 @@
                 </div>
                 <div class="gift-item">
                     <div class="gift-image">
+                       <img src="https://cdn.discordapp.com/attachments/1223480705300824094/1403471919076085840/IMG-20250807-WA0032.jpg?ex=6897ac94&is=68965b14&hm=ee49bb1fccbb9c1130db38477778c79110cd820a33e6cd6f481e79b71b644fec&">
+                    </div>
+                    <div class="gift-info">
+                        <h3 class="gift-name">Jogo de panela</h3>
+                        <div class="gift-price">R$ 200,00</div>
+                        <button class="gift-button" data-price="200" data-item-id="item41">Presentear com PIX</button>
+                    </div>
+                </div>
+                <div class="gift-item">
+                    <div class="gift-image">
                        <img src="https://lh3.googleusercontent.com/gcxEhRc8zzdFPD4jlE_7AFTO3FFp9fLRpJ7ZKQC5b6Izs2kqh5_aqJqwYb2Jle8HEQoWv1YBmkv5c0GmF2EVi1vadxHipjWqHIt2Mlbd8aLrFQ=s0">
                     </div>
                     <div class="gift-info">
@@ -1106,7 +1116,8 @@
         'item37': '00020126330014BR.GOV.BCB.PIX0111519509498505204000053039865406100.005802BR5901N6001C62160512Valepresente6304B3F1',
         'item38': '00020126330014BR.GOV.BCB.PIX0111519509498505204000053039865406120.005802BR5901N6001C62160512Valepresente63040B96',
         'item39': '00020126330014BR.GOV.BCB.PIX0111519509498505204000053039865406140.005802BR5901N6001C62160512Valepresente6304D31E',
-        'item40': '00020126330014BR.GOV.BCB.PIX0111519509498505204000053039865406160.005802BR5901N6001C62160512Valepresente63046B79'
+        'item40': '00020126330014BR.GOV.BCB.PIX0111519509498505204000053039865406160.005802BR5901N6001C62160512Valepresente63046B79',
+        'item41': '00020126330014BR.GOV.BCB.PIX0111519509498505204000053039865406200.005802BR5901N6001C62160512Jogodepanela630478C7'
     };
 
 
