--- a/nav/presentes.html
+++ b/nav/presentes.html
@@ -812,7 +812,7 @@
                         <button class="gift-button" data-price="50.11" data-item-id="item19">Presentear com PIX</button>
                     </div>
                 </div>
-                <div class="gift-item">
+                <div class="gift-item gift-given">
                     <div class="gift-image">
                        <img src="https://lh3.googleusercontent.com/4JkyIIDdIg2TKk1MvJfsD1VfHwpmC7vphfNW3F8oZEFyiwLOXMrCPZxsEJ8JAY-Mp-LI5ggfY1nxgYgL0_YjILG0BbIGDiMoH7uZOBLKLc4z=s0">
                     </div>
