--- a/nav/presentes.html
+++ b/nav/presentes.html
@@ -702,7 +702,7 @@
                         <button class="gift-button" data-price="122.95" data-item-id="item9">Presentear com PIX</button>
                     </div>
                 </div>
-                <div class="gift-item">
+                <div class="gift-item gift-given">
                     <div class="gift-image">
                        <img src="https://lh3.googleusercontent.com/H2PUh4HGy_wJkUMYPQOJMkcfzPrqcgXcelPVsfP9CK0zpp3Sh_YVQaUQW349U8x2PSz8Qom096yt1LzGaaaOp7ckAaw829Jt5FZcnLw1fqgm=s0">
                     </div>
