--- a/nav/presentes.html
+++ b/nav/presentes.html
@@ -766,7 +766,7 @@
                     <div class="gift-image">
                        <img src="https://storage.googleapis.com/icasei-products-prod/couple/1427575/images/4346146/1751238586/site-de-casamento-icasei-lp-0000000112231134.jpg">
                     </div>
-                    <div class="gift-info">
+                    <div class="gift-info gift-given">
                         <h3 class="gift-name">Jogo de lençol</h3>
                         <div class="gift-price">R$ 80,00</div>
                         <button class="gift-button" data-price="80" data-item-id="item16">Presentear com PIX</button>
