--- a/nav/presentes.html
+++ b/nav/presentes.html
@@ -762,11 +762,11 @@
                         <button class="gift-button" data-price="60.52" data-item-id="item15">Presentear com PIX</button>
                     </div>
                 </div>
-                <div class="gift-item">
+                <div class="gift-item gift-given">
                     <div class="gift-image">
                        <img src="https://storage.googleapis.com/icasei-products-prod/couple/1427575/images/4346146/1751238586/site-de-casamento-icasei-lp-0000000112231134.jpg">
                     </div>
-                    <div class="gift-info gift-given">
+                    <div class="gift-info">
                         <h3 class="gift-name">Jogo de lençol</h3>
                         <div class="gift-price">R$ 80,00</div>
                         <button class="gift-button" data-price="80" data-item-id="item16">Presentear com PIX</button>
