--- a/nav/presentes.html
+++ b/nav/presentes.html
@@ -642,7 +642,7 @@
                         <button class="gift-button" data-price="70.92" data-item-id="item3">Presentear com PIX</button>
                     </div>
                 </div>
-                <div class="gift-item">
+                <div class="gift-item gift-given">
                     <div class="gift-image">
                         <img src="https://storage.googleapis.com/icasei-products-prod/couple/1427575/images/4346080/1751237374/site-de-casamento-icasei-lp-0000000112231270.webp">
                     </div>
