--- a/nav/presentes.html
+++ b/nav/presentes.html
@@ -716,7 +716,7 @@
                     <div class="gift-image">
                        <img src="https://storage.googleapis.com/icasei-products-prod/couple/1427575/images/4350280/1751408112/site-de-casamento-icasei-lp-0000000112281877.jpg">
                     </div>
-                    <div class="gift-info">
+                    <div class="gift-info gift-given">
                         <h3 class="gift-name">Garrafa térmica</h3>
                         <div class="gift-price">R$ 39,71</div>
                         <button class="gift-button" data-price="39.71" data-item-id="item11">Presentear com PIX</button>
