--- a/nav/presentes.html
+++ b/nav/presentes.html
@@ -782,7 +782,7 @@
                         <button class="gift-button" data-price="200" data-item-id="item41">Presentear com PIX</button>
                     </div>
                 </div>
-                <div class="gift-item">
+                <div class="gift-item gift-given">
                     <div class="gift-image">
                        <img src="https://lh3.googleusercontent.com/gcxEhRc8zzdFPD4jlE_7AFTO3FFp9fLRpJ7ZKQC5b6Izs2kqh5_aqJqwYb2Jle8HEQoWv1YBmkv5c0GmF2EVi1vadxHipjWqHIt2Mlbd8aLrFQ=s0">
                     </div>
